@@ -1,3 +1,9 @@
+2002-10-09  James Tanis  <jtt@hawking.sysdetect.com>
+
+	* lib/b_addrgroup.c (bk_net_init_sys_error): Check explicitly for
+	the autoconf determined "second connect to refusd port" value when
+	testing for BkAddrGroupStateRemoteError.
+
 2002-10-04  James Tanis  <jtt@hawking.sysdetect.com>
 
 	* lib/b_run.c (bk_run_once): Do not block in select(2) if an event
